<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_size"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/tvQuestion1"
            android:text="@string/question1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/style_statement" />

        <RadioGroup
            android:id="@+id/rgMeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion1">

            <RadioButton
                android:id="@+id/rbBeef"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beef"
                android:textSize="@dimen/option_textSize" />

            <RadioButton
                android:id="@+id/rbChicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chicken"
                android:textSize="@dimen/option_textSize" />

            <RadioButton
                android:id="@+id/rbImpossibleMeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/impossible_meat"
                android:textSize="@dimen/option_textSize" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvQuestion2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/question2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rgMeat" />

        <CheckBox
            android:id="@+id/cbCheese"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cheese"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvQuestion2"
            style="@style/item_style" />

        <CheckBox
            android:id="@+id/cbOnion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onions"
            android:textSize="@dimen/option_textSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbCheese" />

        <CheckBox
            android:id="@+id/cbSalad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salad"
            android:textSize="@dimen/option_textSize"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbOnion" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cbSalad" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>